trial of conflict & solving via wait implemneted

--- a/social_occ_solution/social_occ.ipynb
+++ b/social_occ_solution/social_occ.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "25560485",
    "metadata": {},
    "outputs": [],
@@ -11,6 +11,9 @@
     "import numpy as np\n",
     "\n",
     "from time import sleep\n",
+    "\n",
+    "import math\n",
+    "import sys\n",
     "\n",
     "\n",
     "r1 = \"r1\"\n",
@@ -71,23 +74,27 @@
     "\n",
     "    \n",
     "\n",
-    "def rrt_solver(C, start_state, end_state, trial_count):\n",
+    "def rrt_solver(k, start_state, end_state, trial_count):\n",
     "    rrt = ry.PathFinder()\n",
-    "    rrt.setProblem(C, start_state, end_state)\n",
+    "    rrt.setProblem(k, start_state, end_state)\n",
     "    \n",
     "    ret = rrt.solve()\n",
+    "    \n",
     "        \n",
     "    for i in range(trial_count):\n",
     "        if ret.feasible:\n",
     "            return ret\n",
     "        ret = rrt.solve() \n",
     "        print(ret.feasible) \n",
-    "         \n",
+    "    \n",
+    "    \n",
     "    \n",
     "    return ret\n",
     "\n",
     "\n",
     "def rrt_viewer(C, ret, attach_state = None, attach = False):\n",
+    "    \n",
+    "    print(\"ikbngşbnşfgbnşjkfgnbjgfn\")\n",
     "    \n",
     "    sleep(1)\n",
     "    if not ret.feasible:\n",
@@ -107,7 +114,7 @@
     "    for i in path:\n",
     "        C.setJointState(i)\n",
     "        C.view()\n",
-    "        sleep(0.03)\n",
+    "        sleep(0.3)\n",
     "    \n",
     "    C.setFrameState(initial_state)\n",
     "    \n",
@@ -150,7 +157,7 @@
     "\n",
     "maps = [\"map1_simple_cross.g\", \"map2_tunnel.g\", \"map3_two_cave.g\", \"map4_one_cave.g\", \"map5_pioneer.g\"]\n",
     "\n",
-    "C.addFile(f\"maps/{maps[0]}\")\n",
+    "C.addFile(f\"maps/{maps[1]}\")\n",
     "C.view()\n",
     "\n",
     "\n",
@@ -174,17 +181,20 @@
     "    sampled_path = original_path[sample_indices]\n",
     "\n",
     "    # Prepare hold and final states\n",
-    "    hold_state = original_path[hold_index].reshape(1, -1)\n",
+    "    \n",
     "    final_state = original_path[-1].reshape(1, -1)\n",
+    "    \n",
+    "    insert_pos = -1\n",
+    "    \n",
+    "    if hold_index > 0:\n",
+    "        hold_state = original_path[hold_index].reshape(1, -1)\n",
+    "        insert_pos = np.searchsorted(sample_indices, hold_index)\n",
+    "        with_hold = np.insert(sampled_path, insert_pos, hold_state, axis=0)\n",
+    "        final_result = np.vstack([with_hold, final_state])\n",
     "\n",
-    "    # Determine best insertion point for the hold state\n",
-    "    insert_pos = np.searchsorted(sample_indices, hold_index)\n",
-    "\n",
-    "    # Insert hold state at the right spot\n",
-    "    with_hold = np.insert(sampled_path, insert_pos, hold_state, axis=0)\n",
-    "\n",
-    "    # Append final state\n",
-    "    final_result = np.vstack([with_hold, final_state])\n",
+    "    else:\n",
+    "        final_result = np.vstack([sampled_path, final_state])\n",
+    "            \n",
     "    return final_result, insert_pos\n",
     "\n",
     "\n",
@@ -199,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "a5a7966e",
    "metadata": {},
    "outputs": [],
@@ -224,7 +234,6 @@
     "\n",
     "r1_hold_path = rrt_solver(C, initial_state, j1_hold, 3)\n",
     "r1_move_path = rrt_solver(C, j1_hold, j1_moved, 3)\n",
-    "print((r1_hold_path.x), (r1_move_path.x))\n",
     "r1_final = (np.array([i[0:3] for i in np.concatenate((r1_hold_path.x, r1_move_path.x))]), len(r1_hold_path.x))\n",
     "\n",
     "\n",
@@ -237,21 +246,258 @@
     "\n",
     "final_path = np.hstack((r1_final[0], r2_final[0]))\n",
     "\n",
-    "path_viewer(C, final_path, r1_final[1], r2_final[1])\n",
+    "#path_viewer(C, final_path, r1_final[1], r2_final[1])\n",
     "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "a368ee3a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43]\n",
+      "wait wait wait \n",
+      "[[ 4.00000000e+00 -4.00000000e+00  0.00000000e+00]\n",
+      " [ 3.83836285e+00 -3.86798687e+00 -2.26085086e-03]\n",
+      " [ 3.56085593e+00 -3.91827032e+00  1.19654226e-02]\n",
+      " [ 3.37229793e+00 -3.97545704e+00 -3.43326366e-03]\n",
+      " [ 3.14082539e+00 -4.00248632e+00 -2.48886574e-02]\n",
+      " [ 3.00003193e+00 -3.99999974e+00 -1.12634237e-06]\n",
+      " [ 3.00003193e+00 -3.99999974e+00 -1.12634237e-06]\n",
+      " [ 3.01612855e+00 -3.79303083e+00  2.12281500e-02]\n",
+      " [ 2.92694464e+00 -3.51376936e+00  2.76914552e-02]\n",
+      " [ 2.74568869e+00 -3.31060229e+00  5.49183055e-03]\n",
+      " [ 2.60588405e+00 -3.09108301e+00 -3.50133006e-03]\n",
+      " [ 2.42267272e+00 -2.85366505e+00 -8.29179735e-03]\n",
+      " [ 2.21691312e+00 -2.84865512e+00  1.63286711e-02]\n",
+      " [ 2.05265090e+00 -2.80857516e+00 -2.37744380e-02]\n",
+      " [ 1.82786497e+00 -2.82270831e+00  5.27981692e-02]\n",
+      " [ 1.63992180e+00 -2.80645075e+00  9.25216338e-02]\n",
+      " [ 1.40892270e+00 -2.82455591e+00  4.15496194e-02]\n",
+      " [ 1.23837511e+00 -2.84620703e+00  1.10044722e-02]\n",
+      " [ 1.04779474e+00 -2.86634055e+00  2.24809069e-02]\n",
+      " [ 1.04779474e+00 -2.86634055e+00  2.24809069e-02]\n",
+      " [ 1.04779474e+00 -2.86634055e+00  2.24809069e-02]\n",
+      " [ 1.04779474e+00 -2.86634055e+00  2.24809069e-02]\n",
+      " [ 1.04779474e+00 -2.86634055e+00  2.24809069e-02]\n",
+      " [ 1.04779474e+00 -2.86634055e+00  2.24809069e-02]\n",
+      " [ 1.04779474e+00 -2.86634055e+00  2.24809069e-02]\n",
+      " [ 1.04779474e+00 -2.86634055e+00  2.24809069e-02]\n",
+      " [ 1.04779474e+00 -2.86634055e+00  2.24809069e-02]\n",
+      " [ 1.04779474e+00 -2.86634055e+00  2.24809069e-02]\n",
+      " [ 1.04779474e+00 -2.86634055e+00  2.24809069e-02]\n",
+      " [ 1.04779474e+00 -2.86634055e+00  2.24809069e-02]\n",
+      " [ 8.55754332e-01 -2.81445204e+00  2.85721809e-02]\n",
+      " [ 6.04817922e-01 -2.61335293e+00  3.03286932e-02]\n",
+      " [ 4.75371251e-01 -2.34709766e+00  2.28181863e-02]\n",
+      " [ 3.59336265e-01 -2.07201972e+00  1.04820931e-02]\n",
+      " [ 2.72997798e-01 -1.82931700e+00  1.86735412e-02]\n",
+      " [ 2.28434711e-01 -1.61838194e+00 -5.15406257e-03]\n",
+      " [ 1.43039105e-01 -1.33394872e+00 -2.05208184e-02]\n",
+      " [ 1.65310636e-01 -1.13259703e+00 -4.71290888e-03]\n",
+      " [ 6.76305131e-03 -8.01474394e-01 -2.92728765e-02]\n",
+      " [-1.19869346e-01 -5.77859293e-01 -1.70623677e-02]\n",
+      " [-2.20675170e-01 -3.77254394e-01  5.95217381e-03]\n",
+      " [-3.36013574e-01 -1.08558046e-01 -8.42722684e-03]\n",
+      " [-4.66438846e-01  1.13003974e-01 -1.78255186e-03]\n",
+      " [-5.42438611e-01  3.88775672e-01 -2.44910217e-02]\n",
+      " [-5.77803658e-01  7.21567856e-01 -5.23236622e-02]\n",
+      " [-5.99999962e-01  9.75373137e-01 -7.86689180e-02]\n",
+      " [-5.19833046e-01  1.19024434e+00 -7.98037451e-02]\n",
+      " [-4.08234167e-01  1.29916441e+00 -7.73177681e-02]\n",
+      " [-3.49989334e-01  1.47222987e+00 -1.09626941e-01]\n",
+      " [-3.16295138e-01  1.68174464e+00 -6.83934747e-02]\n",
+      " [-3.59760090e-01  1.89846570e+00 -8.39320547e-02]\n",
+      " [-2.84214732e-01  1.83645939e+00 -8.07628866e-02]\n",
+      " [-2.81951344e-01  1.96432970e+00 -8.11341368e-02]\n",
+      " [-3.45434538e-01  2.20785786e+00 -9.38624091e-02]\n",
+      " [-4.34324714e-01  2.48274795e+00 -9.85978426e-02]\n",
+      " [-5.02843376e-01  2.73394709e+00 -1.09612887e-01]\n",
+      " [-6.32749720e-01  2.93385004e+00 -1.18160591e-01]\n",
+      " [-8.60949406e-01  3.02093224e+00 -1.74687451e-01]\n",
+      " [-8.97691946e-01  3.10522995e+00 -2.01066546e-01]\n",
+      " [-1.06520597e+00  3.02273282e+00 -1.88986730e-01]\n",
+      " [-1.20043943e+00  2.94512731e+00 -2.48350916e-01]\n",
+      " [-1.36632264e+00  2.91581001e+00 -1.96475850e-01]\n",
+      " [-1.45502383e+00  2.88412191e+00 -2.63857141e-01]\n",
+      " [-1.62944060e+00  2.80998248e+00 -2.13353566e-01]\n",
+      " [-1.75938903e+00  2.82882282e+00 -1.58877245e-01]\n",
+      " [-1.79251757e+00  2.86208632e+00 -1.57500990e-01]\n",
+      " [-1.84123734e+00  2.82210113e+00 -1.57496122e-01]\n",
+      " [-1.92914042e+00  2.85450956e+00 -1.85764371e-01]\n",
+      " [-1.95467795e+00  2.84610775e+00 -1.41527931e-01]\n",
+      " [-2.07056008e+00  2.95638779e+00 -1.09007649e-01]\n",
+      " [-2.12945909e+00  3.03719183e+00 -1.10273847e-01]]\n",
+      "problem solved via waiting\n"
+     ]
+    },
+    {
+     "ename": "SystemExit",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "An exception has occurred, use %tb to see the full traceback.\n",
+      "\u001b[0;31mSystemExit\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "# heuristic one -- checking for any collision\n",
     "\n",
-    "\n"
+    "\n",
+    "def collision_states(r1_path, r2_path):   # 0.8 seems to be working well\n",
+    "    \n",
+    "    state_indices = []\n",
+    "    \n",
+    "    for i in range(0, len(r1_path)):\n",
+    "        \n",
+    "        r1_loc = r1_path[i]\n",
+    "        r2_loc = r2_path[i]\n",
+    "    \n",
+    "        distance = math.sqrt(pow(abs(r1_loc[0] - r2_loc[0]), 2) + pow(abs(r1_loc[1] - r2_loc[1]), 2))\n",
+    "                    \n",
+    "        if distance < 1.1:\n",
+    "            state_indices.append(i)\n",
+    "            \n",
+    "    return state_indices\n",
+    "\n",
+    "\n",
+    "\n",
+    "collision_indices = collision_states(r1_final[0], r2_final[0])\n",
+    "\n",
+    "print(collision_indices)\n",
+    "\n",
+    "if len(collision_indices) == 0:\n",
+    "    print(\"problem solved ....\")\n",
+    "    sys.exit()\n",
+    "    \n",
+    "def find_another_path_in_collision(collision_states, r1_final, r2_final):\n",
+    "    \n",
+    "    r1_path = r1_final[0]\n",
+    "    r2_path = r2_final[0]\n",
+    "    \n",
+    "    temp = ry.Config()\n",
+    "    temp.addConfigurationCopy(C)\n",
+    "    \n",
+    "    sstt = np.concatenate((r1_final[0][r1_final[1]], r2_final[0][r2_final[1]]))\n",
+    "    temp.setJointState(sstt)\n",
+    "    \n",
+    "    temp.attach(r1, m1)\n",
+    "    temp.attach(r2, m2)\n",
+    "        \n",
+    "    rrt_again_initial = np.concatenate((r1_path[collision_states[0] - 3], r2_path[collision_states[0] - 3]))\n",
+    "    rrt_again_last = np.concatenate((r1_path[collision_states[-1] + 3], r2_path[collision_states[-1] + 3]))\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    rrt_again = rrt_solver(temp, rrt_again_initial, rrt_again_last, 5)\n",
+    "    \n",
+    "    if rrt_again.feasible:\n",
+    "        return False\n",
+    "    \n",
+    "    current_path = path_mapper((rrt_again.x, -1), len(collision_indices) + 7)\n",
+    "    \n",
+    "    del temp\n",
+    "    return current_path\n",
+    "\n",
+    "\n",
+    "def manipulate_main(r1_final, r2_final, collision_indices, current_path):\n",
+    "    r1_path, r1_hold_idx = r1_final\n",
+    "    r2_path, r2_hold_idx = r2_final\n",
+    "\n",
+    "    # Compute range to overwrite\n",
+    "    start = max(collision_indices[0] - 3, 0)\n",
+    "    end = min(collision_indices[-1] + 3, min(len(r1_path), len(r2_path), len(current_path[0]) + start + 1))  # assumes r1, r2 same length\n",
+    "    \n",
+    "    print(\"start: \", start)\n",
+    "    print(\"end:\", end)\n",
+    "    print(\"len:\", len(current_path[0]))\n",
+    "\n",
+    "    # Replace values in r1 and r2 from current_path\n",
+    "    r1_path[start:end] = current_path[0][0:end - start, :3]   # First 3 values\n",
+    "    r2_path[start:end] = current_path[0][0:end - start, 3:]   # Last 3 values\n",
+    "\n",
+    "    return (r1_path, r1_hold_idx), (r2_path, r2_hold_idx)\n",
+    "\n",
+    "\n",
+    "def make_wait(r1_final, r2_final, collision_indices):\n",
+    "    r1_path, r1_hold_idx = r1_final\n",
+    "    r2_path, r2_hold_idx = r2_final\n",
+    "\n",
+    "    # How many steps to repeat\n",
+    "    wait_len = int(len(collision_indices) / 2)\n",
+    "    insert_idx = collision_indices[0] - 3\n",
+    "\n",
+    "    # Get the state to repeat in r1\n",
+    "    wait_state_r1 = r1_path[insert_idx]\n",
+    "    repeated_r1 = np.repeat(wait_state_r1.reshape(1, -1), wait_len, axis=0)\n",
+    "\n",
+    "    # Insert wait_state into r1_path at the collision start index\n",
+    "    r1_path = np.insert(r1_path, insert_idx, repeated_r1, axis=0)\n",
+    "\n",
+    "    # Extend r2_path by repeating the last element wait_len times\n",
+    "    last_r2 = r2_path[-1]\n",
+    "    repeated_r2 = np.repeat(last_r2.reshape(1, -1), wait_len, axis=0)\n",
+    "    r2_path = np.concatenate((r2_path, repeated_r2), axis=0)\n",
+    "\n",
+    "    return (r1_path, r1_hold_idx), (r2_path, r2_hold_idx)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "newPath = find_another_path_in_collision(collision_indices, r1_final, r2_final)\n",
+    "newPath = False\n",
+    "\n",
+    "if not newPath:\n",
+    "    \n",
+    "    print(\"wait wait wait \")\n",
+    "    r1_final, r2_final = make_wait(r1_final, r2_final, collision_indices)\n",
+    "    \n",
+    "    print(r1_final[0])\n",
+    "    \n",
+    "    \n",
+    "    newCollisiion = collision_states(r1_final[0], r2_final[0])\n",
+    "    \n",
+    "    if len(newCollisiion) == 0:\n",
+    "        print(\"problem solved via waiting\")\n",
+    "        final_path = np.hstack((r1_final[0], r2_final[0]))\n",
+    "        \n",
+    "        path_viewer(C, final_path, r1_final[1], r2_final[1])\n",
+    "        \n",
+    "        sys.exit()\n",
+    "    \n",
+    "\n",
+    "if newPath:\n",
+    "    r1_final, r2_final = manipulate_main(r1_final, r2_final, collision_indices, newPath)\n",
+    "    final_path = np.hstack((r1_final[0], r2_final[0]))\n",
+    "\n",
+    "    sys.exit(\"problem solved\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "    \n",
+    "            \n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "    \n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "db85049f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path_viewer(C, final_path, r1_final[1], r2_final[1])"
    ]
   }
  ],
