--- a/social_occ_solution/social_occ.ipynb
+++ b/social_occ_solution/social_occ.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "25560485",
    "metadata": {},
    "outputs": [],
@@ -153,9 +153,9 @@
     "\n",
     "C = ry.Config()\n",
     "\n",
-    "maps = [\"map1_simple_cross.g\", \"map2_tunnel.g\", \"map3_two_cave.g\", \"map4_one_cave.g\", \"map5_pioneer.g\"]\n",
+    "maps = [\"map1_simple_cross.g\", \"map2_tunnel.g\", \"map3_two_cave.g\", \"map4_one_cave.g\", \"map5_pioneer.g\", \"map3_corner.g\"]\n",
     "\n",
-    "C.addFile(f\"maps/{maps[0]}\")\n",
+    "C.addFile(f\"maps/{maps[3]}\")\n",
     "C.view()\n",
     "\n",
     "\n",
@@ -237,137 +237,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "be5af4e6",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "final result:  [[ 2.50000000e+00 -3.50000000e+00  0.00000000e+00]\n",
-      " [ 2.46326573e+00 -3.40699176e+00 -2.47628928e-04]\n",
-      " [ 2.38159438e+00 -3.22575232e+00 -1.38262577e-02]\n",
-      " [ 2.33558799e+00 -3.06431290e+00 -3.43298624e-02]\n",
-      " [ 2.26159869e+00 -2.87851453e+00 -3.21984709e-02]\n",
-      " [ 2.28135716e+00 -2.70322699e+00  1.22012375e-02]\n",
-      " [ 2.28604375e+00 -2.52746042e+00 -2.62659708e-02]\n",
-      " [ 2.24820276e+00 -2.33925536e+00 -3.25088277e-02]\n",
-      " [ 2.13679075e+00 -2.17317476e+00 -3.16221787e-02]\n",
-      " [ 2.09008474e+00 -2.03444291e+00 -3.08614539e-03]\n",
-      " [ 1.99348838e+00 -1.85969431e+00 -1.10153346e-02]\n",
-      " [ 1.87830604e+00 -1.82560353e+00  1.41199182e-03]\n",
-      " [ 1.78385693e+00 -1.65764645e+00 -2.72998441e-02]\n",
-      " [ 1.74767147e+00 -1.46990433e+00 -5.18996410e-02]\n",
-      " [ 1.68199203e+00 -1.28105498e+00 -5.58050067e-02]\n",
-      " [ 1.61299291e+00 -1.09337142e+00 -5.93561292e-02]\n",
-      " [ 1.50754494e+00 -9.37380128e-01 -2.32169893e-02]\n",
-      " [ 1.41826226e+00 -7.61126470e-01 -7.29208876e-03]\n",
-      " [ 1.34479372e+00 -5.75109997e-01 -7.78734661e-03]\n",
-      " [ 1.30805945e+00 -4.82101760e-01 -8.03497554e-03]\n",
-      " [ 1.30805945e+00 -4.82101760e-01 -8.03497554e-03]\n",
-      " [ 1.12993165e+00 -5.36295528e-01 -6.13155485e-02]\n",
-      " [ 1.01296007e+00 -5.02581147e-01 -1.36431323e-01]\n",
-      " [ 8.72210250e-01 -6.21604021e-01 -6.90185257e-02]\n",
-      " [ 7.26740624e-01 -7.55861287e-01 -6.04341351e-02]\n",
-      " [ 5.31937395e-01 -7.31005256e-01 -3.34237927e-02]\n",
-      " [ 3.93548193e-01 -6.64545952e-01  1.59081970e-02]\n",
-      " [ 2.49094213e-01 -5.39916235e-01 -7.83682770e-03]\n",
-      " [ 1.00412096e-01 -4.28539541e-01  2.26145405e-03]\n",
-      " [ 1.03439460e-02 -2.87963932e-01  7.21005013e-02]\n",
-      " [-1.44068856e-02 -1.92221221e-01  5.72435304e-02]\n",
-      " [-7.28567149e-02 -6.40588546e-03  2.30214863e-02]\n",
-      " [ 8.75441798e-02  1.05292774e-01 -1.59307349e-02]\n",
-      " [ 2.25976272e-01  2.22611402e-01 -8.60024230e-02]\n",
-      " [ 3.15511610e-01  1.30871039e-01 -1.09102047e-01]\n",
-      " [ 3.93596431e-01  2.53551517e-01 -1.51942747e-01]\n",
-      " [ 5.38690671e-01  3.44606179e-01 -1.97467549e-01]\n",
-      " [ 6.51496999e-01  5.02099047e-01 -2.31510915e-01]\n",
-      " [ 5.38162703e-01  6.59787515e-01 -2.73393205e-01]\n",
-      " [ 3.97575731e-01  7.96901305e-01 -3.08609121e-01]\n",
-      " [ 2.24991461e-01  8.40464663e-01 -2.94354019e-01]\n",
-      " [ 1.10638249e-01  1.00303538e+00 -3.12691729e-01]\n",
-      " [-3.02084684e-02  1.13725931e+00 -3.14137894e-01]\n",
-      " [-1.61150946e-01  1.28481558e+00 -3.36857328e-01]\n",
-      " [-2.99173921e-01  1.39048391e+00 -2.96618759e-01]\n",
-      " [-4.47873796e-01  1.48454253e+00 -2.02949962e-01]\n",
-      " [-6.13914035e-01  1.53609018e+00 -2.04288974e-01]\n",
-      " [-7.62757196e-01  1.66926930e+00 -2.14182469e-01]\n",
-      " [-9.00210556e-01  1.81408085e+00 -2.24666970e-01]\n",
-      " [-1.04198970e+00  1.95475595e+00 -2.35069615e-01]\n",
-      " [-1.20485404e+00  1.87594334e+00 -1.53103337e-01]\n",
-      " [-1.35413117e+00  2.00854036e+00 -1.58946128e-01]\n",
-      " [-1.46050416e+00  2.17111134e+00 -1.36905258e-01]\n",
-      " [-1.60221294e+00  2.31197546e+00 -1.39317734e-01]\n",
-      " [-1.66515098e+00  2.47261340e+00 -1.09971090e-01]\n",
-      " [-1.80802523e+00  2.61251059e+00 -1.13422927e-01]\n",
-      " [-1.96627312e+00  2.64176545e+00 -1.52672358e-01]\n",
-      " [-2.08173457e+00  2.79683493e+00 -1.85983782e-01]\n",
-      " [-2.08965151e+00  2.94331870e+00 -1.71331979e-01]\n",
-      " [-2.16003415e+00  3.01427532e+00 -1.74714630e-01]]\n",
-      "final result:  [[-2.50000000e+00 -3.50000000e+00  0.00000000e+00]\n",
-      " [-2.46326729e+00 -3.40699115e+00  2.48070810e-04]\n",
-      " [-2.38980186e+00 -3.22097345e+00  7.44212431e-04]\n",
-      " [-2.35306915e+00 -3.12796460e+00  9.92283241e-04]\n",
-      " [-2.27311846e+00 -2.94464592e+00  2.45893726e-03]\n",
-      " [-2.19689604e+00 -2.76665506e+00 -3.21947539e-02]\n",
-      " [-2.16064429e+00 -2.67347183e+00 -3.05530790e-02]\n",
-      " [-2.08437633e+00 -2.48869087e+00 -2.63285026e-02]\n",
-      " [-1.99808551e+00 -2.30851616e+00 -1.99813106e-02]\n",
-      " [-1.95807012e+00 -2.21691779e+00 -1.70646727e-02]\n",
-      " [-1.95892375e+00 -2.04300554e+00 -5.35707402e-02]\n",
-      " [-1.81059865e+00 -1.94137847e+00  1.93419254e-03]\n",
-      " [-1.75767350e+00 -2.00215000e+00  5.02961945e-02]\n",
-      " [-1.76392871e+00 -1.83043736e+00  4.60429521e-02]\n",
-      " [-1.64717270e+00 -1.67603072e+00  2.00383033e-02]\n",
-      " [-1.60292826e+00 -1.58635973e+00  2.12808858e-02]\n",
-      " [-1.51316131e+00 -1.40783960e+00  2.71636876e-02]\n",
-      " [-1.42487646e+00 -1.22850739e+00  3.25138979e-02]\n",
-      " [-1.38004990e+00 -1.13919635e+00  3.62711426e-02]\n",
-      " [-1.42571476e+00 -1.00335072e+00  1.80872008e-02]\n",
-      " [-1.38619032e+00 -9.11495528e-01  1.87526540e-02]\n",
-      " [-1.30648116e+00 -7.28071419e-01  2.01829263e-02]\n",
-      " [-1.34497139e+00 -5.75416568e-01  7.80037360e-03]\n",
-      " [-1.30823868e+00 -4.82407717e-01  8.04844441e-03]\n",
-      " [-1.30823868e+00 -4.82407717e-01  8.04844441e-03]\n",
-      " [-1.22091155e+00 -4.98220783e-01  5.41344486e-02]\n",
-      " [-1.07480356e+00 -5.71148038e-01 -4.64006219e-02]\n",
-      " [-1.00383179e+00 -6.41590072e-01 -4.54376810e-02]\n",
-      " [-8.36038111e-01 -5.56070560e-01  1.40076294e-03]\n",
-      " [-6.78387517e-01 -4.99388745e-01  2.48058828e-02]\n",
-      " [-5.84902412e-01 -4.95795711e-01  6.01276221e-02]\n",
-      " [-5.03113767e-01 -3.19695856e-01  9.35115736e-02]\n",
-      " [-3.78799227e-01 -1.78583721e-01  9.57725922e-02]\n",
-      " [-3.24556388e-01 -9.50989413e-02  1.05153740e-01]\n",
-      " [-2.94278017e-01  1.02553716e-01  1.01073648e-01]\n",
-      " [-2.92055201e-01  2.96441074e-01  9.85072025e-02]\n",
-      " [-3.20518462e-01  3.89563436e-01  7.57460865e-02]\n",
-      " [-3.23263768e-01  5.33487361e-01  3.67263317e-02]\n",
-      " [-1.78555331e-01  6.70619253e-01  4.05727673e-02]\n",
-      " [-1.11507726e-01  7.44798021e-01  4.20319137e-02]\n",
-      " [ 3.54006514e-02  8.79070135e-01  4.44285957e-02]\n",
-      " [ 1.16088252e-01  9.38063331e-01  4.74804669e-02]\n",
-      " [ 2.65061956e-01  1.07131435e+00  5.10838340e-02]\n",
-      " [ 3.70947691e-01  1.22811172e+00  4.67752955e-02]\n",
-      " [ 4.36408628e-01  1.30366324e+00  4.93893140e-02]\n",
-      " [ 5.68510445e-01  1.44148610e+00  8.66714468e-02]\n",
-      " [ 7.01945783e-01  1.59033172e+00  9.18356547e-02]\n",
-      " [ 7.72663333e-01  1.66099420e+00  9.42526156e-02]\n",
-      " [ 9.02809921e-01  1.81213617e+00  1.07611138e-01]\n",
-      " [ 1.04221132e+00  1.95546865e+00  1.11934079e-01]\n",
-      " [ 1.07602935e+00  2.04934317e+00  1.18560970e-01]\n",
-      " [ 1.21262765e+00  2.19538209e+00  1.22240113e-01]\n",
-      " [ 1.35051795e+00  2.34020609e+00  1.25166558e-01]\n",
-      " [ 1.42228272e+00  2.40977576e+00  1.28309467e-01]\n",
-      " [ 1.57855701e+00  2.52473883e+00  1.01820304e-01]\n",
-      " [ 1.74580084e+00  2.58702636e+00  1.33264631e-01]\n",
-      " [ 1.81630406e+00  2.65788496e+00  1.36155276e-01]\n",
-      " [ 1.94672358e+00  2.80360345e+00  1.65494632e-01]\n",
-      " [ 2.08859736e+00  2.94441444e+00  1.71901264e-01]\n",
-      " [ 2.16013765e+00  3.01422103e+00  1.74905786e-01]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "r1_final = path_mapper(initial_path_finding(C, 1), 60)\n",
     "r2_final = path_mapper(initial_path_finding(C, 2), 60)"
@@ -375,80 +248,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "a368ee3a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45]\n",
-      "r1path=========== [ 2.5 -3.5  0. ]\n",
-      "final result:  [[ 5.31937395e-01 -7.31005256e-01 -3.34237927e-02 -1.22091155e+00\n",
-      "  -4.98220783e-01  5.41344486e-02]\n",
-      " [ 4.23493808e-01 -9.06617144e-01 -6.71213879e-02 -1.39217277e+00\n",
-      "  -6.42957417e-01  6.35157106e-02]\n",
-      " [ 2.13179575e-01 -9.71173467e-01  6.73305295e-03 -1.57839313e+00\n",
-      "  -7.08810418e-01  1.00004227e-01]\n",
-      " [-1.93501508e-02 -1.00468003e+00 -4.16267044e-04 -1.62582407e+00\n",
-      "  -7.24385103e-01  3.60565591e-02]\n",
-      " [-2.48572953e-01 -8.97497875e-01 -2.17635149e-02 -1.65334315e+00\n",
-      "  -5.54309917e-01  1.55119796e-02]\n",
-      " [-5.93612171e-01 -9.69185475e-01  1.76788093e-02 -1.62174928e+00\n",
-      "  -4.66214125e-01  2.10803748e-03]\n",
-      " [-8.19528511e-01 -9.61958536e-01 -1.14688509e-02 -1.63360253e+00\n",
-      "  -1.78052570e-01 -5.67159757e-02]\n",
-      " [-1.04131293e+00 -9.74975849e-01  1.34683847e-02 -1.56867652e+00\n",
-      "   5.14849658e-02 -8.20566368e-02]\n",
-      " [-1.17685600e+00 -7.69589795e-01 -3.42560530e-02 -1.37803119e+00\n",
-      "   2.69872558e-01 -8.96235754e-02]\n",
-      " [-1.26880210e+00 -5.81360034e-01 -3.24430501e-02 -1.15175497e+00\n",
-      "   4.31958177e-01 -1.17258835e-01]\n",
-      " [-1.22734985e+00 -4.10198719e-01 -8.78691183e-02 -1.01208562e+00\n",
-      "   5.21088060e-01 -8.63937455e-02]\n",
-      " [-1.14603571e+00 -2.64623475e-01 -2.90714202e-02 -7.58498536e-01\n",
-      "   5.28530034e-01 -1.35151447e-02]\n",
-      " [-1.00417483e+00 -1.53543258e-01 -5.77016249e-02 -6.16815662e-01\n",
-      "   5.24383425e-01  5.55482006e-02]\n",
-      " [-8.65650406e-01 -8.25573430e-02 -1.19888198e-02 -4.01377999e-01\n",
-      "   6.44960514e-01  1.12256589e-01]\n",
-      " [-6.64233197e-01  8.51395844e-02 -3.36947956e-02 -2.91922912e-01\n",
-      "   7.20948396e-01  1.50275414e-01]\n",
-      " [-4.17915254e-01  2.87227124e-01 -4.31105685e-02 -2.01315057e-01\n",
-      "   9.15565503e-01  8.99972859e-02]\n",
-      " [-2.90193972e-01  4.52226711e-01 -8.33992676e-02 -4.63437097e-02\n",
-      "   1.07811796e+00  9.94387584e-02]\n",
-      " [-2.97376585e-01  6.54309426e-01 -1.31068818e-01  1.06890694e-01\n",
-      "   1.24207435e+00  6.79738626e-02]\n",
-      " [-4.11692272e-01  9.11532602e-01 -1.85016243e-01  2.28655352e-01\n",
-      "   1.25246361e+00  7.26094692e-02]\n",
-      " [-4.92524355e-01  1.17233519e+00 -1.66003332e-01  2.73646501e-01\n",
-      "   1.26975090e+00  6.29829321e-02]\n",
-      " [-5.97666463e-01  1.35908769e+00 -2.10973498e-01  4.34498987e-01\n",
-      "   1.52747694e+00  7.73897350e-02]\n",
-      " [-7.26806857e-01  1.59513319e+00 -2.36954612e-01  6.12469189e-01\n",
-      "   1.76236723e+00  8.00034829e-02]\n",
-      " [-8.42973079e-01  1.77010274e+00 -2.26479327e-01  8.71770434e-01\n",
-      "   1.86546008e+00  1.38910063e-01]\n",
-      " [-9.00210556e-01  1.81408085e+00 -2.24666970e-01  9.02809921e-01\n",
-      "   1.81213617e+00  1.07611138e-01]]\n",
-      "choosing different path\n",
-      "start:  25\n",
-      "end: 48\n",
-      "len: 24\n"
-     ]
-    },
-    {
-     "ename": "SystemExit",
-     "evalue": "problem solved  by selecting differetn collision path",
-     "output_type": "error",
-     "traceback": [
-      "An exception has occurred, use %tb to see the full traceback.\n",
-      "\u001b[0;31mSystemExit\u001b[0m\u001b[0;31m:\u001b[0m problem solved  by selecting differetn collision path\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# heuristic one -- checking for any collision\n",
     "\n",
