trial of rrt in pcg maps

--- a/social_occ_solution/rrt_solv1.ipynb
+++ b/social_occ_solution/rrt_solv1.ipynb
@@ -2,10 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "73c08ab7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import robotic as ry\n",
     "import numpy as np\n",
@@ -13,18 +24,8 @@
     "from time import sleep\n",
     "\n",
     "\n",
-    "r1 = \"r1\"\n",
-    "r2 = \"r2\"\n",
-    "m1 = \"m1\"\n",
-    "m2 = \"m2\"\n",
-    "g1 = \"g1\"\n",
-    "g2 = \"g2\"\n",
     "\n",
-    "robots = [r1, r2]\n",
-    "m_objects = [m1, m2]\n",
-    "goals = [g1, g2]\n",
     "\n",
-    "goals_reverse = [g2, g1]\n",
     "\n",
     "def komo_solver(robots, m_objects, goals):\n",
     "    \n",
@@ -141,22 +142,6 @@
     "    C.getFrame(m2).unLink()\n",
     "        \n",
     "        \n",
-    "        \n",
-    "\n",
-    "    \n",
-    "    \n",
-    "\n",
-    "C = ry.Config()\n",
-    "\n",
-    "maps = [\"map1_simple_cross.g\", \"map2_tunnel.g\", \"map3_two_cave.g\", \"map4_one_cave.g\", \"map5_pioneer.g\"]\n",
-    "\n",
-    "C.addFile(f\"maps/{maps[4]}\")\n",
-    "C.view()\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
     "\n",
     "\n",
     "\n",
@@ -192,7 +177,54 @@
     "\n",
     "\n",
     "\n",
-    "    \n",
+    "r1 = \"r1\"\n",
+    "r2 = \"r2\"\n",
+    "m1 = \"m1\"\n",
+    "m2 = \"m2\"\n",
+    "g1 = \"g1\"\n",
+    "g2 = \"g2\"\n",
+    "\n",
+    "robots = [r1, r2]\n",
+    "m_objects = [m1, m2]\n",
+    "goals = [g1, g2]\n",
+    "\n",
+    "goals_reverse = [g2, g1]\n",
+    "\n",
+    "\n",
+    "C = ry.Config()\n",
+    "\n",
+    "maps = [\"map1_simple_cross.g\", \"map2_tunnel.g\", \"map3_two_cave.g\", \"map4_one_cave.g\", \"map5_pioneer.g\"]\n",
+    "\n",
+    "\n",
+    "\n",
+    "C.addFile(f\"maps/{maps[4]}\")\n",
+    "\n",
+    "C.view()\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "3d7c4432",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 27\u001b[0m\n\u001b[1;32m     21\u001b[0m C\u001b[38;5;241m.\u001b[39mattach(r2, m2)\n\u001b[1;32m     24\u001b[0m rrt_solution \u001b[38;5;241m=\u001b[39m rrt_solver(C, inittt, final, \u001b[38;5;241m20\u001b[39m)\n\u001b[0;32m---> 27\u001b[0m \u001b[43mpath_viewer\u001b[49m\u001b[43m(\u001b[49m\u001b[43mC\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mrrt_solution\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mx\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m3\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m5\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[1], line 112\u001b[0m, in \u001b[0;36mpath_viewer\u001b[0;34m(C, path, attach_index1, attach_index2)\u001b[0m\n\u001b[1;32m    110\u001b[0m C\u001b[38;5;241m.\u001b[39msetJointState(path[i])\n\u001b[1;32m    111\u001b[0m C\u001b[38;5;241m.\u001b[39mview()\n\u001b[0;32m--> 112\u001b[0m \u001b[43msleep\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m0.05\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m    114\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m i \u001b[38;5;241m==\u001b[39m attach_index1:\n\u001b[1;32m    115\u001b[0m     C\u001b[38;5;241m.\u001b[39mattach(r1, m1)\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
     "initial_state = C.getJointState()\n",
     "\n",
     "first_robot_hold, ret1 = komo_onestate_hold(r1, m1)  \n",
@@ -219,9 +251,7 @@
     "rrt_solution = rrt_solver(C, inittt, final, 20)\n",
     "\n",
     "\n",
-    "path_viewer(C, rrt_solution.x, 3, 5)\n",
-    "\n",
-    "\n"
+    "path_viewer(C, rrt_solution.x, 3, 5)\n"
    ]
   }
  ],
