--- a/social_occ_solution/segman_maps/rrt_solv.ipynb
+++ b/social_occ_solution/segman_maps/rrt_solv.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "73c08ab7",
    "metadata": {},
    "outputs": [
@@ -12,7 +12,7 @@
        "0"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,12 +181,10 @@
     "    temp.delFrame(f\"ego{3 - index}\")\n",
     "    temp.delFrame(f\"obj{3 - index}\")\n",
     "    \n",
-    "    print(\"temp view \")\n",
-    "    temp.view()\n",
-    "    sleep(5)\n",
-    "\n",
-    "\n",
     "    ego1 = f\"ego{index}\"\n",
+    "    obj1 = f\"obj{index}\"\n",
+    "    goal1 = f\"goal{index}\"\n",
+    "    \n",
     "    \n",
     "    first_robot_hold, ret1 = komo_onestate_hold(temp, ego1, obj1)  \n",
     "    j1_hold = first_robot_hold.getPath()[0]  # birinci tobotun cargonun yanına geldiği state\n",
@@ -227,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "3d7c4432",
    "metadata": {},
    "outputs": [
@@ -235,39 +233,108 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "temp view \n",
-      "-- WARNING:kin.cpp:getFrame:415(-1) cannot find frame named 'ego2'\n",
-      "-- WARNING:kin.cpp:getFrame:415(-1) cannot find frame named 'ego1'\n",
-      "STACK9 /bin/python3(_PyFunction_Vectorcall\n",
-      "STACK8 /bin/python3(_PyEval_EvalFrameDefault\n",
-      "STACK7 /bin/python3(+0x198a6b) [0x560ebe037a6b]\n",
-      "STACK6 /bin/python3(_PyObject_MakeTpCall\n",
-      "STACK5 /bin/python3(+0x18ae12) [0x560ebe029e12]\n",
-      "STACK4 /home/alperen/.local/lib/python3.10/site-packages/robotic/_robotic.so(+0x3f21e) [0x7fa7eaa2521e]\n",
-      "STACK3 /home/alperen/.local/lib/python3.10/site-packages/robotic/_robotic.so(+0xc5a22) [0x7fa7eaaaba22]\n",
-      "STACK2 symbols2feature(FeatureSymbol, rai::Array<rai::String> const&, rai::Configuration const&, rai::ArrayDouble const&, rai::ArrayDouble const&, int)\n",
-      "STACK1 rai::Configuration::getFrameIDs(rai::Array<rai::String> const&) const\n",
-      "STACK0 rai::LogToken::~LogToken()\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "== ERROR:kin.cpp:getFrameIDs:446(-2) frame name 'ego1' doesn't exist\n"
-     ]
-    },
-    {
-     "ename": "RuntimeError",
-     "evalue": "kin.cpp:getFrameIDs:446(-2) frame name 'ego1' doesn't exist",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[2], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m j1_hold, j1_moved \u001b[38;5;241m=\u001b[39m \u001b[43mkomo_whole_planner\u001b[49m\u001b[43m(\u001b[49m\u001b[43mC\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m      2\u001b[0m j2_hold, j2_moved \u001b[38;5;241m=\u001b[39m komo_whole_planner(C, \u001b[38;5;241m2\u001b[39m)\n\u001b[1;32m      4\u001b[0m inittt \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mconcatenate((j1_hold[:\u001b[38;5;241m3\u001b[39m], j2_hold[\u001b[38;5;241m3\u001b[39m:]))\n",
-      "Cell \u001b[0;32mIn[1], line 171\u001b[0m, in \u001b[0;36mkomo_whole_planner\u001b[0;34m(c, index)\u001b[0m\n\u001b[1;32m    166\u001b[0m sleep(\u001b[38;5;241m5\u001b[39m)\n\u001b[1;32m    169\u001b[0m ego1 \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mego\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mindex\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m--> 171\u001b[0m first_robot_hold, ret1 \u001b[38;5;241m=\u001b[39m \u001b[43mkomo_onestate_hold\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtemp\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mego1\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mobj1\u001b[49m\u001b[43m)\u001b[49m  \n\u001b[1;32m    172\u001b[0m j1_hold \u001b[38;5;241m=\u001b[39m first_robot_hold\u001b[38;5;241m.\u001b[39mgetPath()[\u001b[38;5;241m0\u001b[39m]  \u001b[38;5;66;03m# birinci tobotun cargonun yanına geldiği state\u001b[39;00m\n\u001b[1;32m    175\u001b[0m first_robot_move, ret1 \u001b[38;5;241m=\u001b[39m komo_onestate_move(temp, ego1, obj1, goal1)\n",
-      "Cell \u001b[0;32mIn[1], line 38\u001b[0m, in \u001b[0;36mkomo_onestate_hold\u001b[0;34m(C, robot, m_object)\u001b[0m\n\u001b[1;32m     36\u001b[0m komo\u001b[38;5;241m.\u001b[39maddControlObjective([], \u001b[38;5;241m0\u001b[39m)\n\u001b[1;32m     37\u001b[0m komo\u001b[38;5;241m.\u001b[39maddObjective([], ry\u001b[38;5;241m.\u001b[39mFS\u001b[38;5;241m.\u001b[39maccumulatedCollisions, [], ry\u001b[38;5;241m.\u001b[39mOT\u001b[38;5;241m.\u001b[39meq) \n\u001b[0;32m---> 38\u001b[0m \u001b[43mkomo\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43maddObjective\u001b[49m\u001b[43m(\u001b[49m\u001b[43m[\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mry\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mFS\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdistance\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m[\u001b[49m\u001b[43mrobot\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mm_object\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mry\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mOT\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43meq\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     40\u001b[0m ret \u001b[38;5;241m=\u001b[39m ry\u001b[38;5;241m.\u001b[39mNLP_Solver(komo\u001b[38;5;241m.\u001b[39mnlp(), verbose\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m4\u001b[39m)\u001b[38;5;241m.\u001b[39msolve()\n\u001b[1;32m     41\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m (komo, ret)\n",
-      "\u001b[0;31mRuntimeError\u001b[0m: kin.cpp:getFrameIDs:446(-2) frame name 'ego1' doesn't exist"
+      "initial\n",
+      "final\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n"
      ]
     }
    ],
@@ -275,7 +342,7 @@
     "j1_hold, j1_moved = komo_whole_planner(C, 1)\n",
     "j2_hold, j2_moved = komo_whole_planner(C, 2)\n",
     "\n",
-    "inittt = np.concatenate((j1_hold[:3], j2_hold[3:]))\n",
+    "inittt = np.concatenate((j1_hold, j2_hold))\n",
     "\n",
     "print(\"initial\")\n",
     "C.setJointState(inittt)\n",
@@ -283,7 +350,7 @@
     "sleep(5)\n",
     "\n",
     "\n",
-    "final = np.concatenate((j1_moved[:3], j2_moved[3:]))\n",
+    "final = np.concatenate((j1_moved, j2_moved))\n",
     "\n",
     "print(\"final\")\n",
     "C.setJointState(final)\n",
