--- a/social_occ_solution/social_occ.ipynb
+++ b/social_occ_solution/social_occ.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "id": "25560485",
    "metadata": {},
    "outputs": [
@@ -19,7 +19,7 @@
        "0"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,7 +277,7 @@
     "#C.addFile(f\"maps/{maps[3]}\")\n",
     "\n",
     "\n",
-    "C.addFile(f\"segman_maps/real_maps/{segman_maps[0]}\")\n",
+    "C.addFile(f\"segman_maps/real_maps/{segman_maps[1]}\")\n",
     "\n",
     "C.view()\n",
     "\n",
@@ -544,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "be5af4e6",
    "metadata": {},
    "outputs": [
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "id": "105b87bc",
    "metadata": {},
    "outputs": [],
@@ -636,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "id": "a368ee3a",
    "metadata": {},
    "outputs": [
@@ -644,29 +644,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[38, 39, 40, 41]\n",
-      "-- RRT_PathFinder.cpp:RRT_PathFinder:255(0) initializing with infeasible q0:\n",
-      "query: h_goal: False\n",
-      "wait wait wait \n",
-      "0 g_coll: 0 isGoal: 1 isFeasible: 0\n",
-      "proxy:  (obj2)-(floor) [24,1] \td=-6.93889e-18\n",
-      "proxy:  (obj2)-(ego2) [24,22] \td=-6.02608e-05\n",
-      "False\n",
-      "False\n",
-      "False\n",
-      "Updated ego1_final path with detour inserted.\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "all the input array dimensions except for the concatenation axis must match exactly, but along dimension 0, the array at index 0 has size 65 and the array at index 1 has size 60",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[4], line 159\u001b[0m\n\u001b[1;32m    155\u001b[0m     ego1_final \u001b[38;5;241m=\u001b[39m (new_ego1_path, ego1_final[\u001b[38;5;241m1\u001b[39m])  \u001b[38;5;66;03m# preserve the second element (likely times or something)\u001b[39;00m\n\u001b[1;32m    157\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mUpdated ego1_final path with detour inserted.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m--> 159\u001b[0m     final_path \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mhstack\u001b[49m\u001b[43m(\u001b[49m\u001b[43m(\u001b[49m\u001b[43mego1_final\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mego2_final\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    160\u001b[0m     path_viewer(C, final_path, ego1_final[\u001b[38;5;241m1\u001b[39m], ego1_final[\u001b[38;5;241m1\u001b[39m])\n\u001b[1;32m    162\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n",
-      "File \u001b[0;32m~/.local/lib/python3.10/site-packages/numpy/_core/shape_base.py:367\u001b[0m, in \u001b[0;36mhstack\u001b[0;34m(tup, dtype, casting)\u001b[0m\n\u001b[1;32m    365\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m _nx\u001b[38;5;241m.\u001b[39mconcatenate(arrs, \u001b[38;5;241m0\u001b[39m, dtype\u001b[38;5;241m=\u001b[39mdtype, casting\u001b[38;5;241m=\u001b[39mcasting)\n\u001b[1;32m    366\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m--> 367\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43m_nx\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mconcatenate\u001b[49m\u001b[43m(\u001b[49m\u001b[43marrs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdtype\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdtype\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcasting\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mcasting\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[0;31mValueError\u001b[0m: all the input array dimensions except for the concatenation axis must match exactly, but along dimension 0, the array at index 0 has size 65 and the array at index 1 has size 60"
+      "[]\n",
+      "problem solved via regular singular rrt \n"
      ]
     }
    ],
@@ -764,7 +743,7 @@
     "    return (ego1_path, ego1_hold_idx), (ego2_path, ego2_hold_idx)\n",
     "\n",
     "\n",
-    "for i in range(10):\n",
+    "for i in range(1):\n",
     "\n",
     "    collision_indices = collision_states(ego1_final[0], ego2_final[0])\n",
     "\n",
@@ -802,35 +781,49 @@
     "            \n",
     "        else:\n",
     "            candidate_point = find_available_point_solve(ego1_final, ego2_final, collision_indices, is_free)\n",
-    "\n",
+    "            \n",
+    "                \n",
     "            if isinstance(candidate_point, tuple):\n",
-    "                \n",
     "                point_path, free_point = candidate_point\n",
-    "                \n",
-    "                point_pathWithInsert = path_mapper((point_path.x, -1), len(collision_indices) + 10)\n",
+    "\n",
+    "                point_path = np.array(point_path.x)  # make sure it’s a clean numpy array\n",
+    "\n",
+    "                point_path = path_mapper((point_path, -1), len(collision_indices) + 10)\n",
     "\n",
     "                start_idx = max(0, collision_indices[0] - 5)\n",
     "\n",
     "                # Modify ego1_final\n",
-    "                # 1. Take ego1 path up to start_idx (not including start_idx)\n",
-    "                # 2. Add the new point_path\n",
-    "                # 3. Add the remaining ego1 path after collision point\n",
     "                ego1_path_before = ego1_final[0][:start_idx]\n",
-    "                ego1_path_after = ego1_final[0][collision_indices[-1]:]  # +1 to skip colliding state itself\n",
-    "                \n",
-    "                \n",
-    "        \n",
+    "                ego1_path_after = ego1_final[0][collision_indices[-1]+1:]\n",
     "\n",
-    "                # Concatenate paths\n",
-    "                new_ego1_path = np.vstack((ego1_path_before, point_pathWithInsert[0], ego1_path_after))\n",
-    "\n",
-    "                # Replace ego1_final\n",
-    "                ego1_final = (new_ego1_path, ego1_final[1])  # preserve the second element (likely times or something)\n",
+    "                new_ego1_path = np.vstack((ego1_path_before, point_path[0], ego1_path_after))\n",
+    "                ego1_final = (new_ego1_path, ego1_final[1])  # preserve timestamps\n",
     "\n",
     "                print(\"Updated ego1_final path with detour inserted.\")\n",
-    "                \n",
+    "\n",
+    "                # --- Now for ego2_path ---\n",
+    "\n",
+    "                # Step 1: Get the element to repeat\n",
+    "                repeat_idx = max(0, collision_indices[0] - 3)\n",
+    "                repeat_element = ego2_final[0][repeat_idx]  # this is a [x, y] vector (or [x,y,z,...])\n",
+    "\n",
+    "                # Step 2: Create 5 copies of it\n",
+    "                repeated_elements = np.repeat(repeat_element[np.newaxis, :], 4, axis=0)\n",
+    "\n",
+    "                # Step 3: Modify ego2_final path\n",
+    "                ego2_path_before = ego2_final[0][:repeat_idx]\n",
+    "                ego2_path_after = ego2_final[0][repeat_idx:]  # continue normally after repeat_idx\n",
+    "\n",
+    "                new_ego2_path = np.vstack((ego2_path_before, repeated_elements, ego2_path_after))\n",
+    "\n",
+    "                ego2_final = (new_ego2_path, ego2_final[1])  # again preserve timestamps\n",
+    "\n",
+    "                print(\"Updated ego2_final path by repeating stuck state 5 times.\")\n",
+    "\n",
+    "                # Combine and view\n",
     "                final_path = np.hstack((ego1_final[0], ego2_final[0]))\n",
     "                path_viewer(C, final_path, ego1_final[1], ego1_final[1])\n",
+    "\n",
     "                \n",
     "            else:\n",
     "                print(\"no solution found\")\n",
@@ -857,12 +850,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "db85049f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#path_viewer(C, final_path, ego1_final[1], ego2_final[1])"
+    "path_viewer(C, final_path, ego1_final[1], ego2_final[1])"
    ]
   }
  ],
